--- a/ERP_CAN_Project/eprcan/server/Pages/AddTblPoVendor.razor
+++ b/ERP_CAN_Project/eprcan/server/Pages/AddTblPoVendor.razor
@@ -17,7 +17,7 @@
                 </RadzenLabel>
               </div>
               <div class="col-md-9">
-                <RadzenDropDown Data="@(getVwVendorsResult)" Placeholder="Choose VendorAddress" style="width: 100%" TextProperty="OrganizationName" @bind-Value="@((tblpovendor.VendorAddressBook_FK))" ValueProperty="AddressBook_SEQ" Name="VendorAddressBook_FK">
+                <RadzenDropDown Data="@(getVwVendorsResult)" Placeholder="Choose VendorAddress" style="width: 100%" TextProperty="OrganizationName" @bind-Value="@((tblpovendor.VendorAddressBook_FK))" ValueProperty="AddressBook_SEQ" Name="VendorAddressBook_FK" Change="@VendorAddressBookFkChange">
                 </RadzenDropDown>
               </div>
             </div>
@@ -65,101 +65,21 @@
             </div>
             <div style="margin-bottom: 1rem" class="row">
               <div class="col-md-3">
-                <RadzenLabel Component="AP_Balance" style="width: 100%" Text="Kết sổ">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.AP_Balance))" Name="AP_Balance">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="Outstand_Inv_Amt" style="width: 100%" Text="Số tiền hóa đơn đáo hạn">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.Outstand_Inv_Amt))" Name="Outstand_Inv_Amt">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="Outstand_Credit" style="width: 100%" Text="Tín dụng đáo hạn">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.Outstand_Credit))" Name="Outstand_Credit">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="Last_Purchase_Date" style="width: 100%" Text="Ngày đặt mua hàng chót">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenDatePicker DateFormat="MM/dd/yyyy" style="width: 100%" @bind-Value="@((tblpovendor.Last_Purchase_Date))" Name="Last_Purchase_Date">
-                </RadzenDatePicker>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="Last_Payment_Date" style="width: 100%" Text="Ngày thanh toán chót">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenDatePicker DateFormat="MM/dd/yyyy" style="width: 100%" @bind-Value="@((tblpovendor.Last_Payment_Date))" Name="Last_Payment_Date">
-                </RadzenDatePicker>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="MTD_Purchase" style="width: 100%" Text="Mua hàng MTD">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.MTD_Purchase))" Name="MTD_Purchase">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="YTD_Purchase" style="width: 100%" Text="Mua hàng YTD">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.YTD_Purchase))" Name="YTD_Purchase">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
-                <RadzenLabel Component="LYR_Purchase" style="width: 100%" Text="Mua hàng LYR">
-                </RadzenLabel>
-              </div>
-              <div class="col-md-9">
-                <RadzenNumeric style="width: 100%" @bind-Value="@((tblpovendor.LYR_Purchase))" Name="LYR_Purchase">
-                </RadzenNumeric>
-              </div>
-            </div>
-            <div style="margin-bottom: 1rem" class="row">
-              <div class="col-md-3">
                 <RadzenLabel Component="Notes" style="width: 100%" Text="Ghi chú">
                 </RadzenLabel>
               </div>
               <div class="col-md-9">
-                <RadzenTextBox style="width: 100%" @bind-Value="@((tblpovendor.Notes))" Name="Notes">
-                </RadzenTextBox>
+                <RadzenTextArea Placeholder="Ghi chú" style="width: 435px" @bind-Value="@((tblpovendor.Notes))" Name="Textarea0">
+                </RadzenTextArea>
               </div>
             </div>
             <div style="margin-bottom: 1rem" class="row">
               <div class="col-md-3">
-                <RadzenLabel Component="Inactive" style="width: 100%" Text="Không dùng nữa">
+                <RadzenLabel Component="Notes" style="width: 100%" Text="Không còn dùng">
                 </RadzenLabel>
               </div>
-              <div class="col-md-9">
-                <RadzenCheckBox TriState="true" @bind-Value="@((tblpovendor.Inactive))" Name="Inactive">
+              <div class="col-md-4">
+                <RadzenCheckBox @bind-Value="@((tblpovendor.Inactive))" Name="Checkbox0">
                 </RadzenCheckBox>
               </div>
             </div>
